# Cleaning_robot

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DEVSmodelsForm.doc  Makefile  ModelDescription-CleaningRobot.xml  README.md  Vacuume_cleaning_model_Final_Report.docx  cmake_install.cmake
input_data/: motion_controller_input_test_Remote_Control.txt  motion_controller_input_test_proximity.txt  wheel_input.txt
simulation_results/: log__vacuume_robot.csv  log_motion_controller_test.csv  log_proximity_sensor_test.csv  log_wheel_test.csv
src/: main_motion_Controller_test.cpp  main_sensor_test.cpp  main_vaccume_robot.cpp  main_wheel_test.cpp
src/include/: Sensor_block.hpp  Vacuume_robot.hpp  actuators.hpp  motion_controller.hpp  proximity_sense.hpp  remote_input.hpp  wheel.hpp
